{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 128,
  "lineage": "12a856cd-c2f2-e700-4af6-eb5c47253b65",
  "resources": [
    {
      "module": "module.eks-bastion-us",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion-eip",
      "provider": "module.eks-bastion-us.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02eace4d510ed13cc",
            "domain": "vpc",
            "id": "eipalloc-0c431e6ae5475f8d5",
            "instance": "i-081ccd8cbdca0f49d",
            "network_interface": "eni-0f71340331ddb6b8a",
            "private_dns": "ip-10-0-3-248.ec2.internal",
            "private_ip": "10.0.3.248",
            "public_dns": "ec2-3-220-91-193.compute-1.amazonaws.com",
            "public_ip": "3.220.91.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.bastion-pgpcc-capston-infra"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02ad1721610cc7981",
            "domain": "vpc",
            "id": "eipalloc-0f41efaeb49f68ebc",
            "network_interface": "eni-0c51512f16b16213f",
            "private_dns": "ip-10-0-3-162.ec2.internal",
            "private_ip": "10.0.3.162",
            "public_dns": "ec2-3-210-115-197.compute-1.amazonaws.com",
            "public_ip": "3.210.115.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_for-nat_gateway-VPC-10.0.0.0/16"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.capston-igw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-086072d177a413c56",
            "domain": "vpc",
            "id": "eipalloc-0a2f6067406d9b8ca",
            "network_interface": "eni-07524c53103addb5f",
            "private_dns": "ip-10-0-4-63.ec2.internal",
            "private_ip": "10.0.4.63",
            "public_dns": "ec2-3-219-111-215.compute-1.amazonaws.com",
            "public_ip": "3.219.111.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_for-nat_gateway-VPC-10.0.0.0/16"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.capston-igw"
          ]
        }
      ]
    },
    {
      "module": "module.apache-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache-server",
      "each": "list",
      "provider": "module.apache-server.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02eac2c0129f6376b",
            "arn": "arn:aws:ec2:us-east-1:494225612607:instance/i-0be70c803e9e9106b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0be70c803e9e9106b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pgpcc_capston-us",
            "monitoring": false,
            "primary_network_interface_id": "eni-044f5251f41526f86",
            "private_dns": "ip-10-0-0-115.ec2.internal",
            "private_ip": "10.0.0.115",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-0e68229ee40c40273",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06a393f2221ac1db2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a7c194d9f04b790",
            "tags": {
              "Name": "apache-pgpcc-capston-infra-us-east-1",
              "Region": "us-east-1",
              "Stack": "PGPCC CAPSTON"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a393f2221ac1db2"
            ]
          },
          "depends_on": [
            "aws_security_group.apache-server-sg",
            "data.aws_ami.centos7_ami",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02eac2c0129f6376b",
            "arn": "arn:aws:ec2:us-east-1:494225612607:instance/i-04c25defdd8644a95",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04c25defdd8644a95",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pgpcc_capston-us",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f39d33742090fa70",
            "private_dns": "ip-10-0-1-203.ec2.internal",
            "private_ip": "10.0.1.203",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-0bb3296696a2c4a65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06a393f2221ac1db2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ca88766a77bb9963",
            "tags": {
              "Name": "apache-pgpcc-capston-infra-us-east-1",
              "Region": "us-east-1",
              "Stack": "PGPCC CAPSTON"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a393f2221ac1db2"
            ]
          },
          "depends_on": [
            "aws_security_group.apache-server-sg",
            "data.aws_ami.centos7_ami",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02eac2c0129f6376b",
            "arn": "arn:aws:ec2:us-east-1:494225612607:instance/i-01e2a773058677d12",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01e2a773058677d12",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pgpcc_capston-us",
            "monitoring": false,
            "primary_network_interface_id": "eni-0012a125427785dd5",
            "private_dns": "ip-10-0-2-238.ec2.internal",
            "private_ip": "10.0.2.238",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-0297dceb76d04e1f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06a393f2221ac1db2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053ba2cb6a50dff25",
            "tags": {
              "Name": "apache-pgpcc-capston-infra-us-east-1",
              "Region": "us-east-1",
              "Stack": "PGPCC CAPSTON"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a393f2221ac1db2"
            ]
          },
          "depends_on": [
            "aws_security_group.apache-server-sg",
            "data.aws_ami.centos7_ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-bastion-us",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-pgpcc-capston-infra",
      "provider": "module.eks-bastion-us.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02eac2c0129f6376b",
            "arn": "arn:aws:ec2:us-east-1:494225612607:instance/i-081ccd8cbdca0f49d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-081ccd8cbdca0f49d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pgpcc_capston-us",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f71340331ddb6b8a",
            "private_dns": "ip-10-0-3-248.ec2.internal",
            "private_ip": "10.0.3.248",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-0419271dc30127fed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00dfc377fc3b17569"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01811508bd9ccb7db",
            "tags": {
              "Name": "bastion-pgpcc-capston-infra-us-east-1",
              "Region": "us-east-1",
              "Stack": "PGPCC CAPSTON"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00dfc377fc3b17569"
            ]
          },
          "depends_on": [
            "aws_security_group.bastion-sg",
            "data.aws_ami.centos7_ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "capston-igw",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-054ce8c9e56c24daf",
            "owner_id": "494225612607",
            "tags": {
              "Name": "us-east-1-igw"
            },
            "vpc_id": "vpc-09ef29d809c36596d"
          },
          "depends_on": [
            "aws_vpc.pgpcc-capston-infra"
          ]
        }
      ]
    },
    {
      "module": "module.apache-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494225612607:loadbalancer/app/pgpcc-capston/4437622b03f36f10",
            "arn_suffix": "app/pgpcc-capston/4437622b03f36f10",
            "dns_name": "pgpcc-capston-570937511.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:494225612607:loadbalancer/app/pgpcc-capston/4437622b03f36f10",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pgpcc-capston",
            "security_groups": [
              "sg-0267a6f9340d76ad8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01811508bd9ccb7db"
              },
              {
                "subnet_id": "subnet-0e07ff0e956229cda"
              }
            ],
            "subnets": [
              "subnet-01811508bd9ccb7db",
              "subnet-0e07ff0e956229cda"
            ],
            "tags": {
              "Environment": "PGPCC",
              "Stack": "PGPCC CAPSTON"
            },
            "vpc_id": "vpc-09ef29d809c36596d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.lb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.apache-lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494225612607:listener/app/pgpcc-capston/4437622b03f36f10/8845fa39e78862a8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494225612607:targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494225612607:listener/app/pgpcc-capston/4437622b03f36f10/8845fa39e78862a8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:494225612607:loadbalancer/app/pgpcc-capston/4437622b03f36f10",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_tg"
          ]
        }
      ]
    },
    {
      "module": "module.apache-lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494225612607:targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2",
            "arn_suffix": "targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494225612607:targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2",
            "lambda_multi_value_headers_enabled": false,
            "name": "pgpcc-capston-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ef29d809c36596d"
          }
        }
      ]
    },
    {
      "module": "module.apache-lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attach",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:494225612607:targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2-20190731155421671800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494225612607:targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2",
            "target_id": "i-0be70c803e9e9106b"
          },
          "depends_on": [
            "aws_lb_target_group.alb_tg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:494225612607:targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2-20190731155421515200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494225612607:targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2",
            "target_id": "i-04c25defdd8644a95"
          },
          "depends_on": [
            "aws_lb_target_group.alb_tg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:494225612607:targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2-20190731155421456700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494225612607:targetgroup/pgpcc-capston-alb-tg/cc0ac4533d90e1d2",
            "target_id": "i-01e2a773058677d12"
          },
          "depends_on": [
            "aws_lb_target_group.alb_tg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "each": "list",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f41efaeb49f68ebc",
            "id": "nat-020ebfd58d6cbbdf2",
            "network_interface_id": "eni-0c51512f16b16213f",
            "private_ip": "10.0.3.162",
            "public_ip": "3.210.115.197",
            "subnet_id": "subnet-01811508bd9ccb7db"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.capston-igw",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2f6067406d9b8ca",
            "id": "nat-0ae45d8fc5713c121",
            "network_interface_id": "eni-07524c53103addb5f",
            "private_ip": "10.0.4.63",
            "public_ip": "3.219.111.215",
            "subnet_id": "subnet-0e07ff0e956229cda"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.capston-igw",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "each": "list",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-030a84f8a60169770",
            "owner_id": "494225612607",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-020ebfd58d6cbbdf2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table"
            },
            "vpc_id": "vpc-09ef29d809c36596d"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.pgpcc-capston-infra"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-061e7aadfd536a0dc",
            "owner_id": "494225612607",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ae45d8fc5713c121",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table"
            },
            "vpc_id": "vpc-09ef29d809c36596d"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.pgpcc-capston-infra"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-033fe8a864b92985b",
            "owner_id": "494225612607",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054ce8c9e56c24daf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-09ef29d809c36596d"
          },
          "depends_on": [
            "aws_internet_gateway.capston-igw",
            "aws_vpc.pgpcc-capston-infra"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_private",
      "each": "list",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060ac088280c90e3d",
            "route_table_id": "rtb-030a84f8a60169770",
            "subnet_id": "subnet-04a7c194d9f04b790"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0791dbf64c97446cc",
            "route_table_id": "rtb-061e7aadfd536a0dc",
            "subnet_id": "subnet-0ca88766a77bb9963"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d60ef9f265d1bde2",
            "route_table_id": "rtb-030a84f8a60169770",
            "subnet_id": "subnet-053ba2cb6a50dff25"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "each": "list",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028eccf59a9f73534",
            "route_table_id": "rtb-033fe8a864b92985b",
            "subnet_id": "subnet-01811508bd9ccb7db"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ee6e7279b039586",
            "route_table_id": "rtb-033fe8a864b92985b",
            "subnet_id": "subnet-0e07ff0e956229cda"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.apache-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache-server-sg",
      "provider": "module.apache-server.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494225612607:security-group/sg-06a393f2221ac1db2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a393f2221ac1db2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00dfc377fc3b17569"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "apache-server-sg",
            "name_prefix": null,
            "owner_id": "494225612607",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09ef29d809c36596d"
          }
        }
      ]
    },
    {
      "module": "module.eks-bastion-us",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "module.eks-bastion-us.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494225612607:security-group/sg-00dfc377fc3b17569",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dfc377fc3b17569",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": null,
            "owner_id": "494225612607",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09ef29d809c36596d"
          }
        }
      ]
    },
    {
      "module": "module.apache-lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494225612607:security-group/sg-0267a6f9340d76ad8",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0267a6f9340d76ad8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.157/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pgpcc-capston-lb-sg",
            "name_prefix": null,
            "owner_id": "494225612607",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ef29d809c36596d"
          }
        }
      ]
    },
    {
      "module": "module.apache-server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "accesswebserver_open_to_all",
      "provider": "module.apache-server.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-683445895",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06a393f2221ac1db2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.apache-server-sg"
          ]
        }
      ]
    },
    {
      "module": "module.apache-lb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_lb_https_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1368252456",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0267a6f9340d76ad8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.apache-lb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_lb_https_inbound_apache",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1780709941",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0267a6f9340d76ad8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.apache-lb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_lb_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1572062506",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0267a6f9340d76ad8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.lb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.apache-server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_from_bastion",
      "provider": "module.apache-server.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-366336043",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06a393f2221ac1db2",
            "self": false,
            "source_security_group_id": "sg-00dfc377fc3b17569",
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.apache-server-sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494225612607:subnet/subnet-04a7c194d9f04b790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04a7c194d9f04b790",
            "map_public_ip_on_launch": false,
            "owner_id": "494225612607",
            "tags": {
              "Name": "subnet-us-east-1-eks-0",
              "Type": "Private for eks"
            },
            "vpc_id": "vpc-09ef29d809c36596d"
          },
          "depends_on": [
            "aws_vpc.pgpcc-capston-infra",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494225612607:subnet/subnet-0ca88766a77bb9963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ca88766a77bb9963",
            "map_public_ip_on_launch": false,
            "owner_id": "494225612607",
            "tags": {
              "Name": "subnet-us-east-1-eks-1",
              "Type": "Private for eks"
            },
            "vpc_id": "vpc-09ef29d809c36596d"
          },
          "depends_on": [
            "aws_vpc.pgpcc-capston-infra",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494225612607:subnet/subnet-053ba2cb6a50dff25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-053ba2cb6a50dff25",
            "map_public_ip_on_launch": false,
            "owner_id": "494225612607",
            "tags": {
              "Name": "subnet-us-east-1-eks-2",
              "Type": "Private for eks"
            },
            "vpc_id": "vpc-09ef29d809c36596d"
          },
          "depends_on": [
            "aws_vpc.pgpcc-capston-infra",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494225612607:subnet/subnet-01811508bd9ccb7db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01811508bd9ccb7db",
            "map_public_ip_on_launch": false,
            "owner_id": "494225612607",
            "tags": {
              "Name": "subnet-us-east-1-public-0",
              "Type": "Public subnet"
            },
            "vpc_id": "vpc-09ef29d809c36596d"
          },
          "depends_on": [
            "aws_vpc.pgpcc-capston-infra",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494225612607:subnet/subnet-0e07ff0e956229cda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e07ff0e956229cda",
            "map_public_ip_on_launch": false,
            "owner_id": "494225612607",
            "tags": {
              "Name": "subnet-us-east-1-public-1",
              "Type": "Public subnet"
            },
            "vpc_id": "vpc-09ef29d809c36596d"
          },
          "depends_on": [
            "aws_vpc.pgpcc-capston-infra",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pgpcc-capston-infra",
      "provider": "module.vpc-us.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494225612607:vpc/vpc-09ef29d809c36596d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f49c3f7d8d8b4b3e",
            "default_route_table_id": "rtb-0602a960a5f793b57",
            "default_security_group_id": "sg-03264dbbbf9e35598",
            "dhcp_options_id": "dopt-b2560dc9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09ef29d809c36596d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0602a960a5f793b57",
            "owner_id": "494225612607",
            "tags": {
              "Name": "us-east-1-pgpcc-capston"
            }
          }
        }
      ]
    }
  ]
}